--- a/CS-Docker-Compose_Stateless.yml
+++ b/CS-Docker-Compose_Stateless.yml
@@ -1,23 +1,25 @@
 #For description of parameter please do refer to Readme.txt
-version: '3.7'
+version: '3.3'
 services:
   rcs:
-    image: csimagename
+    image: amit17051980/dctm-cs:16.4.0
     environment:
-      - DOCKER_HOST=10.31.169.35
-      - DATABASE_HOST=10.31.170.102
+      - DOCKER_HOST=192.168.0.101
+      - DATABASE_HOST=postgres
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_SERVER_PORT=5432
-      - SERVICE_NAME=MyPostgres
       - ROOT_PASSWORD=${ROOT_PASSWORD}
       - INSTALL_OWNER=dmadmin
       - INSTALL_OWNER_PASSWORD=${INSTALL_OWNER_PASSWORD}
-      - DOCBASE_NAME=DocbaseName
+      - DOCBASE_NAME=documentum
       - GLOBAL_REGISTRY_PASSWORD=${GLOBAL_REGISTRY_PASSWORD}
       - AEK_ALGORITHM=AES_256_CBC
       - AEK_PASSPHRASE=${AEK_PASSPHRASE}
       - AEK_NAME=CSaek
+      - ENABLE_LOCKBOX=false
+      - LOCKBOX_FILE_NAME=lockbox.lb
+      - LOCKBOX_PASSPHRASE=${LOCKBOX_PASSPHRASE}
       - CONFIGURE_THUMBNAIL_SERVER=NO
       - THUMBNAIL_SERVER_PORT=8081
       - THUMBNAIL_SERVER_SSL_PORT=8443
@@ -41,61 +43,51 @@ services:
       - DOCBASE_ID=453216
       - USE_EXISTING_DATABASE_ACCOUNT=
       - INDEXSPACE_NAME=DM_XCHIVE_DOCBASE
-      - USE_EXISTING_AEK=false
+      - USE_EXISTING_AEK_LOCKBOX=false
     hostname:
-      "conatiner_hostname"
+      "documentum-cs"
     container_name:
-      "containername"
+      "documentum-cs"
     ports:
-      - "DOCBROKER_PORT:DOCBROKER_PORT"
-      - "DOCBROKER_SECURE_PORT:DOCBROKER_SECURE_PORT"
-      - "CONTENT_SERVER_PORT:CONTENT_SERVER_PORT"
-      - "CONTENT_SERVER_SECURE_PORT:CONTENT_SERVER_SECURE_PORT"
-      - "METHOD_SVR_PORT:9080"
-      - "METHOD_SVR_SECURE_PORT:9082"
-      - "METHOD_SVR_JMX_PORT:9081"
-      - "APP_SERVER_MGMNT_PORT:9084"
-      - "THUMBNAIL_SERVER_PORT:8081"
-      - "THUMBNAIL_SERVER_SSL_PORT:8443"
+      - "1689:1689"
+      - "1690:1690"
+      - "50000:50000"
+      - "50001:50001"
+      - "9080:9080"
+      - "9082:9082"
+      - "9081:9081"
+      - "9084:9084"
+      - "8081:8081"
+      - "8443:8443"
     volumes:
-      - DocbaseName_odbc:/opt/dctm/odbc
-      - DocbaseName_data:/opt/dctm/data
-      - DocbaseName_dba:/opt/dctm/dba
-      - DocbaseName_share:/opt/dctm/share
-      - DocbaseName_dfc:/opt/dctm/config
-      - DocbaseName_mdserver_conf:/opt/dctm/mdserver_conf
-      - DocbaseName_mdserver_log:/opt/dctm/wildfly11.0.0/server/DctmServer_MethodServer/log
-      - DocbaseName_mdserver_logs:/opt/dctm/wildfly11.0.0/server/DctmServer_MethodServer/logs
-      - DocbaseName_Thumbnail_Server_conf:/opt/dctm/product/16.7/thumbsrv/conf
-      - DocbaseName_Thumbnail_Server_webinf:/opt/dctm/product/16.7/thumbsrv/container/webapps/thumbsrv/WEB-INF
-      - DocbaseName_xhive_storage:/opt/dctm/xhive_storage
-      - DocbaseName_XhiveConnector:/opt/dctm/wildfly11.0.0/server/DctmServer_MethodServer/deployments/XhiveConnector.ear
-      - DocbaseName_MigrationUtility:/opt/dctm/product/16.7/install/external_apps/MigrationUtil
+      - documentum_odbc:/opt/dctm/odbc
+      - documentum_data:/opt/dctm/data
+      - documentum_dba:/opt/dctm/dba
+      - documentum_share:/opt/dctm/share
+      - documentum_dfc:/opt/dctm/config
+      - documentum_mdserver_conf:/opt/dctm/mdserver_conf
+      - documentum_mdserver_log:/opt/dctm/wildfly9.0.1/server/DctmServer_MethodServer/log
+      - documentum_mdserver_logs:/opt/dctm/wildfly9.0.1/server/DctmServer_MethodServer/logs
+      - documentum_Thumbnail_Server_conf:/opt/dctm/product/16.4/thumbsrv/conf
+      - documentum_Thumbnail_Server_webinf:/opt/dctm/product/16.4/thumbsrv/container/webapps/thumbsrv/WEB-INF
+      - documentum_xhive_storage:/opt/dctm/xhive_storage
+      - documentum_XhiveConnector:/opt/dctm/wildfly9.0.1/server/DctmServer_MethodServer/deployments/XhiveConnector.ear
     privileged: true
 #'volumes' service definition: 
 volumes:
- DocbaseName_data:
-    driver: local
-    driver_opts:
-      share: EXTERNALDATA_HOST:DOCUMENTUM_SHARE_PATH
- DocbaseName_share:
-    driver: local
-    driver_opts:
-      share: EXTERNALDATA_HOST:DOCUMENTUM_SHARE_PATH
- DocbaseName_dba:
- DocbaseName_dfc:
- DocbaseName_odbc:
- DocbaseName_mdserver_conf:
- DocbaseName_mdserver_log:
- DocbaseName_mdserver_logs:
- DocbaseName_Thumbnail_Server_conf:
- DocbaseName_Thumbnail_Server_webinf:
- DocbaseName_XhiveConnector:
-    driver: local
-    driver_opts:
-     share: EXTERNALDATA_HOST:DOCUMENTUM_SHARE_PATH
- DocbaseName_xhive_storage:
-    driver: local
-    driver_opts:
-      share: EXTERNALDATA_HOST:DOCUMENTUM_SHARE_PATH
- DocbaseName_MigrationUtility:
+ documentum_data:
+ documentum_share:
+ documentum_dba:
+ documentum_dfc:
+ documentum_odbc:
+ documentum_mdserver_conf:
+ documentum_mdserver_log:
+ documentum_mdserver_logs:
+ documentum_Thumbnail_Server_conf:
+ documentum_Thumbnail_Server_webinf:
+ documentum_XhiveConnector:
+ documentum_xhive_storage:
+networks:
+  default:
+    external:
+      name: dctm-dev
