Process Engine Silent Properties

--- a/media-files/pe.properties
+++ b/media-files/pe.properties
@@ -1,16 +1,6 @@
-# Sat Jun 20 17:54:37 UTC 2020
-# Replay feature output
-# ---------------------
-# This file was built by the Replay feature of InstallAnywhere.
-# It contains variables that were set by Panels, Consoles or Custom Code.
-
-
-
-#all
-#---
 INSTALLER_UI=SILENT
 PE.INSTALL_TARGET=/opt/dctm
-PE.FQDN=localhost
+PE.FQDN=documentum-cs
 PE.DOCBASES_ADMIN_USER_NAME=dmadmin
 PE.DOCBASES_ADMIN_USER_PASSWORD=password
 PROCESS_ENGINE.GLOBAL_REGISTRY_ADMIN_USER_NAME=documentum
