--- a/media-files/pe.properties
+++ b/media-files/pe.properties
@@ -1,4 +1,5 @@
 INSTALLER_UI=SILENT
+APPSERVER.SERVER_HTTP_PORT=9080
 PE.INSTALL_TARGET=/opt/dctm
 PE.FQDN=documentum-cs
 PE.DOCBASES_ADMIN_USER_NAME=dmadmin
